# onboarding_agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  RUNBOOK.md  cleanup_summary.txt  codebase_simplification_summary.txt  container_app_summary.txt  langgraph_removal_summary.txt  memory_cost_control_summary.txt  pyproject.toml  requirements-dev.txt  requirements.txt  today_summary_2026-04-02.txt  today_summary_2026-04-04.txt
.github/workflows/: ci.yml
config/: staff_rosters.example.json
docs/proposals/: remove-langgraph.md
docs/walkthrough/: ARCHITECTURE.md  RUNBOOK.md
docs/walkthrough/flowcharts/: onboarding-agent-function-graphs.html
docs/walkthrough/react-architecture-explorer/: README.md
evals/: __init__.py  run.py
evals/cases/: ambiguous_tracker_lookup_clarifies.json  duplicate_title_separation_clarifies.json  email_lookup_personal_email_supported.json  email_lookup_work_email_supported.json  relaxed_stage_name_background_submission.json  status_update_failure_truthful.json  vacancies_exclude_full_and_over_capacity.json
infra/: FUTURE_INFRA.md
infra/terraform/app/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/container-app/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/foundation/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build_and_push_container_app.sh  deploy_container_app.sh  find_excel_ids.py  generate_docusign_keys.py  generate_gmail_token.py  package_teams_app.sh  reset_runtime_state.py  setup_azure_ad.py  setup_docusign.py  setup_google_sheets.py  setup_slack.py  sync_staff_rosters_to_tfvars.sh  test_docusign_webhook.sh
src/onboarding_agent/: __init__.py  config.py  server.py
src/onboarding_agent/agent/: graph.py  nodes.py  runner.py  session_context.py  state.py
src/onboarding_agent/domain/: __init__.py  field_resolution.py  formatting.py  identity.py  workflows.py
src/onboarding_agent/integrations/: __init__.py  adaptive_cards.py  card_state.py  docusign_client.py  forms_client.py  gmail_client.py  graph_client.py  graph_workbook.py  outlook_email_client.py  sheets_client.py  slack_bot.py  staff_roster_client.py  teams_bot.py  teams_proactive.py  tracker_client.py
src/onboarding_agent/mcp_server/: __init__.py  clients.py  server.py  tools_docusign.py  tools_email.py  tools_graph.py  tools_onboarding.py  tools_slack.py  (+4 more)
teamsappPackage.example/: README.md  manifest.json
templates/: background_clearance_confirmation.html  clear_to_start_email.html  onboarding_email.html
tests/: conftest.py
tests/unit/: test_bot.py  test_card_state.py  test_chat_history.py  test_docusign_client.py  test_email_tools.py  test_job_queue.py  test_jobs.py  test_mcp_tools.py  test_nodes.py  test_observability_evals.py  test_observability_pii.py  test_observability_setup.py  test_proactive.py  test_runner.py  test_separations_client.py  test_staff_roster.py  test_state.py  test_tracker_client.py  test_webhooks.py  test_workflow_policies.py
(+55 files in other folders)
