[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onboarding-agent"
version = "0.1.0"
description = "LangGraph-based AI onboarding agent with FastMCP tools and Teams bot"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastmcp>=2.0.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.17.0",
    "docusign-esign>=3.25.0",
    "botbuilder-core>=4.15.0",
    "botbuilder-integration-aiohttp>=4.15.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
onboarding-mcp = "onboarding_agent.mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
