[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onboarding-agent"
version = "0.1.0"
description = "AI onboarding agent with FastMCP tools and Teams bot"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastmcp>=2.0.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.17.0",
    "docusign-esign>=3.25.0",
    "aiohttp>=3.9.0",
    "azure-cosmos>=4.7.0",
    "azure-storage-queue>=12.10.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "azure-monitor-opentelemetry>=1.8.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "microsoft-agents-activity>=0.8.0",
    "microsoft-agents-authentication-msal>=0.8.0",
    "microsoft-agents-hosting-aiohttp>=0.8.0",
    "microsoft-agents-hosting-core>=0.8.0",
    "microsoft-agents-hosting-teams>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
onboarding-mcp = "onboarding_agent.mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
